@@ -1,3 +1,8 @@
+2014-02-05  Dario Rodriguez <dario@artica.es>
+	
+	* index.php,
+	godmode/setup/setup.php: First implementation of autologin feature.
+
 2014-02-05  Sancho Lerena <slerena@artica.es>
 
 	* operation/newsletter/address_creation.php,
